force-app/main/default/objects/Species__c/fields/Imagen_URL__c.field-meta.xml
<CustomField>
    <fullName>Imagen_URL__c</fullName>
    <label>Imagen URL</label>
    <type>Url</type>
</CustomField>