force-app/main/default/objects/Species__c/fields/Light_notes__c.field-meta.xml
<CustomField>
    <fullName>Light_notes__c</fullName>
    <label>Light Notes</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>