force-app/main/default/objects/Species__c/fields/ligths__c.field-meta.xml
<CustomField>
    <fullName>ligths__c</fullName>
    <label>Light</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>full sun</fullName>
                <default>true</default>
                <label>full sun</label>
            </value>
            <value>
                <fullName>Half shade</fullName>
            </value>
            <value>
                <fullName>shade</fullName>
            </value>
            <value>
                <fullName>indirect</fullName>
            </value>
            <value>
                <fullName>Direct</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>