force-app/main/default/objects/Species__c/fields/Propagation__c.field-meta.xml
<CustomField>
    <fullName>Propagation__c</fullName>
    <label>Propagation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>seeds</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
            <value>
                <fullName>Cutting</fullName>
            </value>
            <value>
                <fullName>grafting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>