force-app/main/default/objects/Species__c/fields/Recommendid_Fertility__c.field-meta.xml
<CustomField>
    <fullName>Recommendid_Fertility__c</fullName>
    <label>Recommendid Fertility</label>
    <type>TextArea</type>
</CustomField>