force-app/main/default/objects/Species__c/fields/Sumering__c.field-meta.xml
<CustomField>
    <fullName>Sumering__c</fullName>
    <label>Summering Watering Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Every  other week</fullName>
            </value>
            <value>
                <fullName>monthy</fullName>
            </value>
            <value>
                <fullName>twice per week</fullName>
            </value>
            <value>
                <fullName>weeky</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>