force-app/main/default/objects/Species__c/fields/Watering__c.field-meta.xml
<CustomField>
    <fullName>Watering__c</fullName>
    <label>Watering Notes</label>
    <type>TextArea</type>
</CustomField>