force-app/main/default/objects/Species__c/fields/Winter_Fertilization_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Winter_Fertilization_Frequency__c</fullName>
    <label>Winter Fertilization Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Weeky</fullName>
            </value>
            <value>
                <fullName>Every other week</fullName>
            </value>
            <value>
                <fullName>Monthy</fullName>
            </value>
            <value>
                <fullName>Every Three Months</fullName>
            </value>
            <value>
                <fullName>Not needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>